src/styles/NavBar.module.css
.NavBar {
  background-color: #2d3142;
}

.NavLink {
  color: #bfc0c0;
  padding: 5px;
}

.NavLink:hover {
  color: #fb6107;
}

* {
  box-sizing: border-box;
}

i {
  font-size: 1.6rem;
  padding: 5px;
  vertical-align: middle;
}

i:hover {
  color: #fb6107;
}

.Active {
  color: #fb6107;
}

a:hover {
  text-decoration: none;
}

